--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "d3": "^7.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-grid-layout": "^1.4.4",
+    "react-masonry-css": "^1.0.16",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
