--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "html2pdf.js": "^0.10.2",
     "http-proxy-middleware": "^3.0.2",
     "react": "^18.3.1",
+    "react-diff-viewer-continued": "^3.4.0",
     "react-dom": "^18.3.1",
     "react-grid-layout": "^1.4.4",
     "react-markdown": "^9.0.1",
