--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-masonry-css": "^1.0.16",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.26.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-tooltip": "^5.28.0",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
@@ -30,6 +30,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://203.252.213.209:4040",
   "eslintConfig": {
     "extends": [
       "react-app",
